src/pages/Calendar/calendar.module.css
.buttons {
    padding: 10px;
    align-items: center;
    justify-content: center;
    display: flex;
}
.teamChips {
    padding-top: 20px;
    float: left;
}

.monthSelection {
    margin-right: 1em;
    margin-left: 1em;
}

.infoBox {
    float: right;
    border: 0.1em solid #2A55E7;
    border-radius: 12px;
    padding: 0.5em;
    margin-top: 1em;
    margin-right: 1em;
}
.wholeCalendar {
    display: flex;
    flex-direction: column;
}

.verticalCalendar {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0px;
}

.dayDiv {
    background-color: lightblue;
    width: 100%;
    min-height: 150px;
    max-height: 400px;
    margin-top: 20px;
    margin-left: 150px;
    margin-right: 150px;
    border-radius: 5px;
    display: flex;
    border: 2px solid black;
}

.dayNumber {
    display: flex;
    flex-direction: column;
    width: 10%;
    height: auto;
    background-color: lightcoral;
    justify-content: center;
    align-items: center;
    border-right: 2px solid black;
}

.dayContent {
    display: flex;
    flex-direction: column;
    width: 90%;
    height: auto;
    background-color: lightblue;
    justify-content: center;
    align-items: center;
}

.content {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 80%;
    width: 100%;
}

.onHolidayContent {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    width: 50%;
    height: 100%;
    flex-direction: column;
}

.onHolidayContent > p {
    text-align: center;
    margin: 0;
    width: 50%;
}

.workingContent {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    width: 50%;
    height: 100%;
    padding-left: 19px;
    border-left: 2px solid black;
    flex-direction: column;
}

.workingContent > p{
    text-align: center;
    margin: 0;
    width: 50%;
}

.headerCont {
    display: flex;
    height: 20%;
    width: 100%;
    border-top: 2px solid black;
}

.onHoliday {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 50%;
    background-color: lightgreen;
    /* border-right: 1px solid black; */
}

.working {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 50%;
    background-color: lightyellow;
    padding: 10px;
    border-left: 2px solid black;
}

.dayDiv > * > p {
    font-weight: bold;
}

.dayDiv > * > * {
    font-weight: bold;
}

.dayNumber > p {
    margin: 0;
}

